# mahos

./: .gitignore  AGENTS.md  CHANGELOG.rst  Makefile  PODMR_N_PATTERN_NEXT_STEPS.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
docs/: .buildinfo  api.html  api_core.html  api_dq.html  api_mahos.html  api_mahos_dq.html  arch.html  arch_gui.html  arch_inst.html  arch_meas.html  arch_node.html  cla.html  cli.html  conf.html  contributing.html  genindex.html  glossary.html  index.html  installation.html  migration.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  tutorial.html  tutorial_comm.html  tutorial_ivcurve.html  tutorial_manual_op.html  (+1 more)
docs-src/: api.rst  api_core.rst  api_dq.rst  api_mahos.rst  arch.rst  arch_gui.rst  arch_inst.rst  arch_meas.rst  arch_node.rst  cli.rst  conf.py  conf.rst  contributing.rst  glossary.rst  index.rst  installation.rst  migration.rst  overview.rst  tutorial_comm.rst  tutorial_ivcurve.rst  tutorial_manual_op.rst  tutorial_next_steps.rst
mahos-dq-ext/: README.rst  pyproject.toml
mahos_dq/: README.rst  pyproject.toml
mahos_dq/mahos/dq/cli/: plot.py
mahos_dq/mahos/dq/gui/: confocal.py  confocal_client.py  hbt.py  hbt_client.py  iodmr.py  iodmr_client.py  odmr.py  odmr_client.py  podmr.py  podmr_client.py  spodmr.py
mahos_dq/mahos/dq/gui/ui/: iodmr.py  odmr.py  odmr.ui  podmr.ui  spodmr.py  spodmr.ui
mahos_dq/mahos/dq/inst/overlay/: confocal_scanner.py  iodmr_sweeper_interface.py  iodmr_sweeper_mock.py  odmr_sweeper_interface.py
mahos_dq/mahos/dq/meas/: confocal.py  confocal_io.py  confocal_tracker.py  confocal_worker.py  hbt_worker.py  iodmr.py  odmr.py  odmr_fitter.py  odmr_io.py  odmr_pg.py  odmr_worker.py  podmr.py  podmr_worker.py  qdyne.py  spectroscopy.py  spectroscopy_fitter.py  spodmr.py
mahos_dq/mahos/dq/meas/podmr_generator/: generator.py
mahos_dq/mahos/dq/msgs/: confocal_msgs.py  hbt_msgs.py  odmr_msgs.py  podmr_msgs.py  qdyne_msgs.py  spectroscopy_msgs.py  spodmr_msgs.py
(+828 files in other folders)
