[build-system]
requires = ["setuptools", "wheel", "pybind11>=2.6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mahos.dq_ext"
version = "0.3.0"
description = "Measurement Automation Handling and Orchestration System - C extension for mahos.dq"
readme = "README.rst"
requires-python = ">=3.10, <3.13"
license = { text = "BSD License (BSD-3-Clause)" }
keywords = [ "measurement automation", "laboratory automation", "instrumentation", ]
authors = [
    { name = "Kosuke Tahara", email = "ktaha@mosk.tytlabs.co.jp" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/ToyotaCRDL/mahos"
Documentation = "https://toyotacrdl.github.io/mahos"
Repository = "https://github.com/ToyotaCRDL/mahos.git"
Changelog = "https://github.com/ToyotaCRDL/mahos/blob/main/CHANGELOG.rst"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["mahos*"]
