[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mahos.dq"
version = "0.3.0"
description = "Measurement Automation Handling and Orchestration System - Defect Qubits"
readme = "README.rst"
requires-python = ">=3.10, <3.13"
license = { text = "BSD License (BSD-3-Clause)" }
keywords = [ "measurement automation", "laboratory automation", "instrumentation", ]
authors = [
    { name = "Kosuke Tahara", email = "ktaha@mosk.tytlabs.co.jp" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["mahos.core"]

[project.urls]
Homepage = "https://github.com/ToyotaCRDL/mahos"
Documentation = "https://toyotacrdl.github.io/mahos"
Repository = "https://github.com/ToyotaCRDL/mahos.git"
Changelog = "https://github.com/ToyotaCRDL/mahos/blob/main/CHANGELOG.rst"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["mahos*"]
